# resource-estimator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  documentation.md  index.html  package-lock.json  package.json  pyproject.toml  tag-from-pipeline.sh  tailwind.config.js  test_js_python_consistency.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  tag_and_release.yml  test-build.yml
assets/: index-0zbl-7qt.js  index-AST1fWd9.js  index-BlH5jlcJ.js  index-BtHIHgiW.js  index-CLujTyZS.js  index-CSs1biqT.css  index-CbbjnZTd.js  index-Cz45QBjw.css  index-DVh-gZ-y.js  index-DZli4urL.js  index-D_T8etLP.js  index-DtAGEvhI.js  index-btAfm3G3.js  index-q5KlgsKH.js  index.67MI8gRj.css  index.C549nmMM.js  index.CRGRG7Ea.js  index.CkOnF7Tv.js  index.CyS5ujir.js  index.D0-QJspE.css  index.DFTOWgD2.js  index.DNS75tQ7.js  index.DzV--9ko.js  markdown-B5w4orK8.js  markdown-BIcF0qP-.js  markdown-BNHsf0F9.js  markdown-CbxYRgub.js  markdown-jXn0uLJD.js  vendor-BtRH2tAl.js
data_analysis/data/: aaltoq20.csv  helmi.csv  vtt-q50.csv
public/: documentation.md
src/: App.jsx  index.css  main.jsx
src/components/: BasketPanel.jsx  DeviceSelector.jsx  Documentation.jsx  Header.jsx  HistoryPanel.jsx  ResourceEstimator.jsx
src/resource_estimator/: __init__.py  data_collection.py  js_export.py  logging_config.py  model.py  plotting.py  utils.py  validation.py
src/resource_estimator/cli/: build.py  generate.py  validate.py
src/utils/: JobHistoryManager.js  ResourceEstimatorModel.js  formatQPUTime.js
tests/: test_analytical_model.py  test_build_cli.py  test_checkpoint.py  test_cli.py  test_cli_coverage.py  test_data_collection.py  test_data_collection_extra.py  test_helpers.py  test_hyperparameters.sh  test_js_python_consistency.js  test_js_python_consistency.py  test_model.py  test_model_extended.py  test_server_limits.py  test_utils.py  test_validation.py
